[package]
name = "whatsapp-rs-http"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1.20.0", features = ["full"] }
