[package]
name = "whatsapp-rs-util"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
md5 = "0.7.0"
rand_core = "0.5.0"
x25519-dalek = { version = "1.2.0", features = ["reusable_secrets"] }
aes-gcm = "0.9.4"
anyhow = "1.0.58"
thiserror = "1.0.31"
