[package]
name = "whatsapp-rs-websocket"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }