[package]
name = "whatsapp-rs-websocket"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
tokio = { version = "1.20.0", features = ["full"] }
futures = "0.3.21"
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
whatsapp-rs-util = { path = "../whatsapp-util" }
